so new theme and also new shit like the scripts thing

--- a/hypr/.config/hypr/userprefs.conf
+++ b/hypr/.config/hypr/userprefs.conf
@@ -1,6 +1,41 @@
+# █▀▀ █░█ █▀█ █▀ █▀█ █▀█
+# █▄▄ █▄█ █▀▄ ▄█ █▄█ █▀▄
+
+exec = hyprctl setcursor Bibata-Modern-Ice 20
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec = gsettings set org.gnome.desktop.interface cursor-size 20
+
+
+# █▀▀ █▀█ █▄░█ ▀█▀
+# █▀░ █▄█ █░▀█ ░█░
+
+exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
+exec = gsettings set org.gnome.desktop.interface document-font-name 'Cantarell 10'
+exec = gsettings set org.gnome.desktop.interface monospace-font-name 'CaskaydiaCove Nerd Font Mono 9'
+exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
+exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
+
+
+# █▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
+# ▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
+
+decoration {
+    dim_special = 0.3
+    blur {
+        special = true
+    }
+}
 
 # █░█ █▀ █▀▀ █▀█   █▀█ █▀█ █▀▀ █▀▀ █▀
 # █▄█ ▄█ ██▄ █▀▄   █▀▀ █▀▄ ██▄ █▀░ ▄█
 
 # Set your personal hyprland configuration here
 # For a sample file, please refer to https://github.com/prasanthrangan/hyprdots/blob/main/Configs/.config/hypr/userprefs.t2
+
+# --- FIX FOR KITTY TRANSPARENCY ---
+# 1. Force the window opacity to 1.0 (so Hyprland doesn't dim/fade the whole window)
+#    and allow Kitty's internal background_opacity to handle the see-through effect.
+windowrulev2 = opacity 1.0 1.0,class:^(kitty)$
+
+# 2. Disable blur for Kitty to remove the "shady glass" effect
+windowrulev2 = noblur,class:^(kitty)$
