--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,23 +1,23 @@
+#  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Decay-Green 
+$GTK_THEME = Decay-Green
 $ICON_THEME = Tela-circle-green
-$COLOR_SCHEME=prefer-dark
-$CURSOR_THEME = Bibata-Modern-Ice
-$CURSOR_SIZE=20
-$CODE_THEME=Modern Purple Theme Dark
+$COLOR_SCHEME = prefer-dark
 
-exec = gsettings set org.gnome.desktop.interface icon-theme '$ICON_THEME'
-exec = gsettings set org.gnome.desktop.interface gtk-theme '$GTK_THEME'
-exec = gsettings set org.gnome.desktop.interface color-scheme '$COLOR_SCHEME'
-exec = Hyde cursor theme '$CURSOR_THEME' size $CURSOR_SIZE
-exec = Hyde code theme '$CODE_THEME'
+# Optional: The varibles above will be set automatically when the theme is loaded
+# This exec commands will soon be deprecated
+
+exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
+exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
+exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
 
 general {
     gaps_in = 3
-    gaps_out = 3
+    gaps_out = 8
     border_size = 2
-    col.active_border = rgba(00c1e4cc)
-    col.inactive_border = rgba(006070cc)
+    col.active_border = rgba(00c1e4ff) rgba(00c1e4ff) 45deg
+
+    col.inactive_border = 
     layout = dwindle
     resize_on_border = true
 }
@@ -30,18 +30,17 @@ group {
 }
 
 decoration {
-    rounding = 5
+    rounding = 10
+    shadow:enabled = false
 
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 5
+        passes = 4
         new_optimizations = on
         ignore_opacity = on
         xray = false
     }
-
-    shadow {
-        enabled = false 
-    }
 }
+
+layerrule = unset,waybar
