--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -85,7 +85,7 @@ bind = $mainMod+Shift, X, exec, pkill -x rofi || /home/skedaddle/.local/share/bi
 bind = $mainMod+Shift, W, exec, pkill -x rofi || /home/skedaddle/.local/share/bin/swwwallselect.sh # launch wallpaper select menu
 bind = $mainMod, V, exec, pkill -x rofi || /home/skedaddle/.local/share/bin/cliphist.sh c # launch clipboard
 bind = $mainMod+Shift, V, exec, pkill -x rofi || /home/skedaddle/.local/share/bin/cliphist.sh # launch clipboard Manager
-bind = $mainMod, K, exec, /home/skedaddle/.local/share/bin/keyboardswitch.sh # switch keyboard layout
+#bind = $mainMod, K, exec, /home/skedaddle/.local/share/bin/keyboardswitch.sh # switch keyboard layout
 bind = $mainMod, slash, exec, pkill -x rofi || /home/skedaddle/.local/share/bin/keybinds_hint.sh c # launch keybinds hint
 bind = $mainMod+Super, A, exec, pkill -x rofi || /home/skedaddle/.local/share/bin/animations.sh # launch animations Manager
 
