--- a/hypr/.config/hypr/animations.conf
+++ b/hypr/.config/hypr/animations.conf
@@ -5,7 +5,8 @@
 # this file can be edited manually or use animation selector to select animations
 
 # disable animations while in hyprpicker and selection screenshot
-layerrule = noanim, hyprpicker
-layerrule = noanim, selection
+# Layer rules removed in v0.53 - need new implementation
+# layerrule = noanim, hyprpicker
+# layerrule = noanim, selection
 
 source = /home/skedaddle/.config/hypr/animations/animations-fast.conf
