--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -34,12 +34,7 @@ decoration {
     shadow:enabled = false
 
     blur {
-        enabled = yes
-        size = 5
-        passes = 4
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
+        enabled = false
     }
 }
 
