--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -12,6 +12,7 @@ windowrulev2 = opacity 0.80 0.80,class:^([Cc]ode)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
 windowrulev2 = opacity 0.70 0.70,class:^(kitty)$
+windowrulev2 = noblur,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
@@ -85,22 +86,23 @@ windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 
 # common modals
-windowrule = float,title:^(Open)$
-windowrule = float,title:^(Choose Files)$
-windowrule = float,title:^(Save As)$
-windowrule = float,title:^(Confirm to replace files)$
-windowrule = float,title:^(File Operation Progress)$
+windowrulev2 = float,title:^(Open)$
+windowrulev2 = float,title:^(Choose Files)$
+windowrulev2 = float,title:^(Save As)$
+windowrulev2 = float,title:^(Confirm to replace files)$
+windowrulev2 = float,title:^(File Operation Progress)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
-layerrule = blur,swaync-notification-window
-layerrule = ignorezero,swaync-notification-window
-layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-layerrule = blur,logout_dialog
+# Layer rules removed in v0.53 - need new implementation
+# layerrule = blur, rofi
+# layerrule = ignorezero, rofi
+# layerrule = blur, notifications
+# layerrule = ignorezero, notifications
+# layerrule = blur, swaync-notification-window
+# layerrule = ignorezero, swaync-notification-window
+# layerrule = blur, swaync-control-center
+# layerrule = ignorezero, swaync-control-center
+# layerrule = blur, logout_dialog
